--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "illuminate/log": "~5.6"
+        "illuminate/log": "~5.6",
+        "ext-curl": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
